Create StakeComponent and VokeComponent, more styling

--- a/src/CSS/base/base.css
+++ b/src/CSS/base/base.css
@@ -8,6 +8,7 @@
     --pri-clr: #E38B29;
     --sec-clr: #002430;
     --acs-clr: #00b3ed;
+    --acs-clr2: #074b61;
   
     --font-railway: 'Raleway', sans-serif;
   }
